Add linters and fix hint errors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="#" class="brand-logo">
             MH<span class="sub-brand-logo">NOOR</span>
           </a>
-          <button class="nav-btn" id="nav-btn">
+          <button type="button" class="nav-btn" id="nav-btn">
             <i class="fas fa-bars"></i>
           </button>
         </div>
@@ -42,7 +42,7 @@
     <!-- sidebar -->
     <aside class="sidebar" id="sidebar">
       <div>
-        <button class="close-btn" id="close-btn">
+        <button type="button" class="close-btn" id="close-btn">
           <i class="fas fa-times"></i>
         </button>
         <ul class="sidebar-links">
@@ -63,6 +63,7 @@
               href="https://github.com/MohamedHNoor"
               class="social-icon"
               target="_blank"
+              rel="noopener"
             >
               <i class="fab fa-github"></i>
             </a>
@@ -72,6 +73,7 @@
               href="https://www.linkedin.com/in/mohamedhnoor/"
               class="social-icon"
               target="_blank"
+              rel="noopener"
             >
               <i class="fab fa-linkedin"></i>
             </a>
@@ -81,6 +83,7 @@
               href="https://twitter.com/MohamedHNoor"
               class="social-icon"
               target="_blank"
+              rel="noopener"
             >
               <i class="fab fa-twitter"></i>
             </a>
@@ -90,6 +93,7 @@
               href="https://medium.com/@MohamedHNoor"
               class="social-icon"
               target="_blank"
+              rel="noopener"
             >
               <i class="fab fa-medium"></i>
             </a>
@@ -99,6 +103,7 @@
               href="https://wellfound.com/u/mohamedhnoor"
               class="social-icon"
               target="_blank"
+              rel="noopener"
             >
               <i class="fab fa-angellist"></i>
             </a>
