Add hero section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,88 @@
     </aside>
 
     <!-- hero section -->
-    <div class="hero"></div>
+    <header class="hero">
+      <div class="section-center hero-center">
+        <article class="hero-info">
+          <div class="underline"></div>
+          <h1>I'm Mohamed Noor</h1>
+          <h4>Full stack Developer</h4>
+          <p>
+            I can help you build a product , feature or website Look through
+            some of my work and experience! If you like what you see and have a
+            project you need coded, don’t hesitate to contact me.
+          </p>
+          <a href="#contact" class="btn hero-btn">contact me</a>
+          <!-- social icons -->
+          <ul class="social-icons hero-icons">
+            <li>
+              <a
+                href="https://github.com/MohamedHNoor"
+                class="social-icon"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/mohamedhnoor/"
+                class="social-icon"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://twitter.com/MohamedHNoor"
+                class="social-icon"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://medium.com/@MohamedHNoor"
+                class="social-icon"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-medium"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://wellfound.com/u/mohamedhnoor"
+                class="social-icon"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-angellist"></i>
+              </a>
+            </li>
+          </ul>
+        </article>
+        <article class="hero-img">
+          <img
+            src="./assets/images/hero-img.jpeg"
+            alt="Mohamed Hassan Noor image"
+            class="hero-photo"
+          />
+        </article>
+      </div>
+    </header>
+    <!-- portfolio -->
+
+    <!-- about section -->
+
+    <!-- contact section -->
+
+    <!-- footer -->
     <script src="js/main.js"></script>
   </body>
 </html>
