--- a/index.html
+++ b/index.html
@@ -189,6 +189,241 @@
       </div>
     </header>
     <!-- portfolio -->
+    <section class="section projects">
+      <div class="section-title project-titles">
+        <h2>Recent Works</h2>
+        <div class="underline"></div>
+      </div>
+      <div class="section-center projects-center">
+        <div class="card">
+          <!-- front card -->
+          <div class="card-side card-front">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <ul>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+              </ul>
+            </div>
+          </div>
+          <!-- back card -->
+          <div class="card-side card-back">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
+                nobis ab unde incidunt distinctio sit quam tempore blanditiis
+                ratione cum!
+              </p>
+              <div class="card-footer">
+                <a href="#" class="btn live"
+                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
+                  live</a
+                >
+                <a href="#" class="btn source"
+                  ><i class="fab fa-github"></i> source</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <!-- front card -->
+          <div class="card-side card-front">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <ul>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+              </ul>
+            </div>
+          </div>
+          <!-- back card -->
+          <div class="card-side card-back">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
+                nobis ab unde incidunt distinctio sit quam tempore blanditiis
+                ratione cum!
+              </p>
+              <div class="card-footer">
+                <a href="#" class="btn live"
+                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
+                  live</a
+                >
+                <a href="#" class="btn source"
+                  ><i class="fab fa-github"></i> source
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <!-- front card -->
+          <div class="card-side card-front">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <ul>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+              </ul>
+            </div>
+          </div>
+          <!-- back card -->
+          <div class="card-side card-back">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
+                nobis ab unde incidunt distinctio sit quam tempore blanditiis
+                ratione cum!
+              </p>
+              <div class="card-footer">
+                <a href="#" class="btn live"
+                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
+                  live</a
+                >
+                <a href="#" class="btn source"
+                  ><i class="fab fa-github"></i> source
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <!-- front card -->
+          <div class="card-side card-front">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <ul>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+              </ul>
+            </div>
+          </div>
+          <!-- back card -->
+          <div class="card-side card-back">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
+                nobis ab unde incidunt distinctio sit quam tempore blanditiis
+                ratione cum!
+              </p>
+              <div class="card-footer">
+                <a href="#" class="btn live"
+                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
+                  live</a
+                >
+                <a href="#" class="btn source"
+                  ><i class="fab fa-github"></i> source
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <!-- front card -->
+          <div class="card-side card-front">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <ul>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+              </ul>
+            </div>
+          </div>
+          <!-- back card -->
+          <div class="card-side card-back">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
+                nobis ab unde incidunt distinctio sit quam tempore blanditiis
+                ratione cum!
+              </p>
+              <div class="card-footer">
+                <a href="#" class="btn live"
+                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
+                  live</a
+                >
+                <a href="#" class="btn source"
+                  ><i class="fab fa-github"></i> source
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <!-- front card -->
+          <div class="card-side card-front">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <ul>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+              </ul>
+            </div>
+          </div>
+          <!-- back card -->
+          <div class="card-side card-back">
+            <img src="./assets/images/project.svg" alt="project image" />
+            <div class="card-info">
+              <h4>Project Title</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
+                nobis ab unde incidunt distinctio sit quam tempore blanditiis
+                ratione cum!
+              </p>
+              <div class="card-footer">
+                <a href="#" class="btn live"
+                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
+                  live</a
+                >
+                <a href="#" class="btn source"
+                  ><i class="fab fa-github"></i> source
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- about section -->
 
