Add project section structure

--- a/index.html
+++ b/index.html
@@ -194,234 +194,46 @@
         <h2>Recent Works</h2>
         <div class="underline"></div>
       </div>
-      <div class="section-center projects-center">
-        <div class="card">
-          <!-- front card -->
-          <div class="card-side card-front">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <ul>
-                <li>Ruby on Rails</li>
-                <li>JavaScript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-              </ul>
-            </div>
-          </div>
-          <!-- back card -->
-          <div class="card-side card-back">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
+      <div class="slider-container">
+        <div class="slide">
+          <img src="./assets/images/hello.JPG" class="slide-img" alt="" />
+          <div class="project-detail">
+            <div>
               <h4>Project Title</h4>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
-                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
-                nobis ab unde incidunt distinctio sit quam tempore blanditiis
-                ratione cum!
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
+                tempore dolores illo. Magni, sint dicta id soluta officia
+                praesentium, molestiae officiis tenetur quasi sapiente voluptas,
+                quod atque repellendus dolore rerum.
               </p>
-              <div class="card-footer">
-                <a href="#" class="btn live"
-                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
-                  live</a
-                >
-                <a href="#" class="btn source"
-                  ><i class="fab fa-github"></i> source</a
-                >
+              <div class="project-btns">
+                <button class="btn">see live</button>
+                <button class="btn">source code</button>
               </div>
             </div>
           </div>
         </div>
-
-        <div class="card">
-          <!-- front card -->
-          <div class="card-side card-front">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <ul>
-                <li>Ruby on Rails</li>
-                <li>JavaScript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-              </ul>
-            </div>
-          </div>
-          <!-- back card -->
-          <div class="card-side card-back">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
-                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
-                nobis ab unde incidunt distinctio sit quam tempore blanditiis
-                ratione cum!
-              </p>
-              <div class="card-footer">
-                <a href="#" class="btn live"
-                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
-                  live</a
-                >
-                <a href="#" class="btn source"
-                  ><i class="fab fa-github"></i> source
-                </a>
-              </div>
-            </div>
+        <div class="slide">
+          <h1>2</h1>
+        </div>
+        <div class="slide">
+          <h1>3</h1>
+        </div>
+        <div class="slide">
+          <div>
+            <img src="./person-1.jpeg" class="person-img" alt="" />
+            <h4>susan doe</h4>
+            <h1>4</h1>
           </div>
         </div>
-
-        <div class="card">
-          <!-- front card -->
-          <div class="card-side card-front">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <ul>
-                <li>Ruby on Rails</li>
-                <li>JavaScript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-              </ul>
-            </div>
-          </div>
-          <!-- back card -->
-          <div class="card-side card-back">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
-                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
-                nobis ab unde incidunt distinctio sit quam tempore blanditiis
-                ratione cum!
-              </p>
-              <div class="card-footer">
-                <a href="#" class="btn live"
-                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
-                  live</a
-                >
-                <a href="#" class="btn source"
-                  ><i class="fab fa-github"></i> source
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <!-- front card -->
-          <div class="card-side card-front">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <ul>
-                <li>Ruby on Rails</li>
-                <li>JavaScript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-              </ul>
-            </div>
-          </div>
-          <!-- back card -->
-          <div class="card-side card-back">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
-                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
-                nobis ab unde incidunt distinctio sit quam tempore blanditiis
-                ratione cum!
-              </p>
-              <div class="card-footer">
-                <a href="#" class="btn live"
-                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
-                  live</a
-                >
-                <a href="#" class="btn source"
-                  ><i class="fab fa-github"></i> source
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <!-- front card -->
-          <div class="card-side card-front">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <ul>
-                <li>Ruby on Rails</li>
-                <li>JavaScript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-              </ul>
-            </div>
-          </div>
-          <!-- back card -->
-          <div class="card-side card-back">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
-                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
-                nobis ab unde incidunt distinctio sit quam tempore blanditiis
-                ratione cum!
-              </p>
-              <div class="card-footer">
-                <a href="#" class="btn live"
-                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
-                  live</a
-                >
-                <a href="#" class="btn source"
-                  ><i class="fab fa-github"></i> source
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <!-- front card -->
-          <div class="card-side card-front">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <ul>
-                <li>Ruby on Rails</li>
-                <li>JavaScript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-              </ul>
-            </div>
-          </div>
-          <!-- back card -->
-          <div class="card-side card-back">
-            <img src="./assets/images/project.svg" alt="project image" />
-            <div class="card-info">
-              <h4>Project Title</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
-                est doloribus impedit nostrum vel quae rem ducimus beatae illum,
-                nobis ab unde incidunt distinctio sit quam tempore blanditiis
-                ratione cum!
-              </p>
-              <div class="card-footer">
-                <a href="#" class="btn live"
-                  ><i class="fa fa-duotone fa-arrow-up-right-from-square"></i>
-                  live</a
-                >
-                <a href="#" class="btn source"
-                  ><i class="fab fa-github"></i> source
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
+      </div>
+      <div class="btn-container">
+        <button type="button" class="prevBtn">
+          <i class="fa-solid fa-circle-arrow-left"></i>
+        </button>
+        <button type="button" class="nextBtn">
+          <i class="fa-solid fa-circle-arrow-right"></i>
+        </button>
       </div>
     </section>
 
