--- a/index.html
+++ b/index.html
@@ -194,47 +194,46 @@
         <h2>Recent Works</h2>
         <div class="underline"></div>
       </div>
-      <div class="slider-container">
-        <div class="slide">
-          <img src="./assets/images/hello.JPG" class="slide-img" alt="" />
-          <div class="project-detail">
-            <div>
-              <h4>Project Title</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
-                tempore dolores illo. Magni, sint dicta id soluta officia
-                praesentium, molestiae officiis tenetur quasi sapiente voluptas,
-                quod atque repellendus dolore rerum.
-              </p>
-              <div class="project-btns">
-                <button class="btn">see live</button>
-                <button class="btn">source code</button>
-              </div>
+      <div class="slide-container section-center">
+        <!-- <article class="slide">
+          <img
+            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
+            class="img"
+            alt="peter doe"
+          />
+          <div class="project-content">
+            <h4 class="project-title">Project Title</h4>
+            <p class="protect-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+              tempora error nostrum provident aperiam ipsum enim dolorum id,
+              maiores vel quaerat delectus distinctio inventore debitis optio
+              reiciendis eveniet amet animi?
+            </p>
+            <ul class="stacks">
+              <li>Ruby on Rails</li>
+              <li>Ruby</li>
+              <li>React</li>
+              <li>Redux</li>
+              <li>JavaScript</li>
+            </ul>
+            <div class="project-btns">
+              <a href="#" class="btn"
+                >live <i class="fa fa-light fa-arrow-up-right-from-square"></i
+              ></a>
+              <a href="#" class="btn">code <i class="fa-solid fa-code"></i></a>
             </div>
           </div>
-        </div>
-        <div class="slide">
-          <h1>2</h1>
-        </div>
-        <div class="slide">
-          <h1>3</h1>
-        </div>
-        <div class="slide">
-          <div>
-            <img src="./person-1.jpeg" class="person-img" alt="" />
-            <h4>susan doe</h4>
-            <h1>4</h1>
-          </div>
-        </div>
+        </article> -->
       </div>
-      <div class="btn-container">
-        <button type="button" class="prevBtn">
-          <i class="fa-solid fa-circle-arrow-left"></i>
-        </button>
-        <button type="button" class="nextBtn">
-          <i class="fa-solid fa-circle-arrow-right"></i>
-        </button>
-      </div>
+      <!-- buttons -->
+      <!-- prev btn -->
+      <button class="prev-btn">
+        <i class="fas fa-chevron-left"></i>
+      </button>
+      <!-- next button -->
+      <button class="next-btn">
+        <i class="fas fa-chevron-right"></i>
+      </button>
     </section>
 
     <!-- about section -->
@@ -242,6 +241,6 @@
     <!-- contact section -->
 
     <!-- footer -->
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
