Remove commented codes

--- a/index.html
+++ b/index.html
@@ -194,37 +194,7 @@
         <h2>Recent Works</h2>
         <div class="underline"></div>
       </div>
-      <div class="slide-container section-center">
-        <!-- <article class="slide">
-          <img
-            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
-            class="img"
-            alt="peter doe"
-          />
-          <div class="project-content">
-            <h4 class="project-title">Project Title</h4>
-            <p class="protect-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-              tempora error nostrum provident aperiam ipsum enim dolorum id,
-              maiores vel quaerat delectus distinctio inventore debitis optio
-              reiciendis eveniet amet animi?
-            </p>
-            <ul class="stacks">
-              <li>Ruby on Rails</li>
-              <li>Ruby</li>
-              <li>React</li>
-              <li>Redux</li>
-              <li>JavaScript</li>
-            </ul>
-            <div class="project-btns">
-              <a href="#" class="btn"
-                >live <i class="fa fa-light fa-arrow-up-right-from-square"></i
-              ></a>
-              <a href="#" class="btn">code <i class="fa-solid fa-code"></i></a>
-            </div>
-          </div>
-        </article> -->
-      </div>
+      <div class="slide-container section-center"></div>
       <!-- buttons -->
       <!-- prev btn -->
       <button class="prev-btn">
