Add about section in index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             some of my work and experience! If you like what you see and have a
             project you need coded, don’t hesitate to contact me.
           </p>
-          <a href="#contact" class="btn hero-btn">contact me</a>
+          <a href="#contact" class="btn hero-btn">Get in touch</a>
           <!-- social icons -->
           <ul class="social-icons hero-icons">
             <li>
@@ -207,7 +207,95 @@
     </section>
 
     <!-- about section -->
+    <section class="section about">
+      <div class="section-center about-center">
+        <!-- about img -->
+        <!-- <article class="about-img">
+          <img
+            src="./images/about-img.jpeg"
+            class="hero-photo"
+            alt="about img"
+          />
+        </article> -->
+        <!-- about info -->
+        <article class="about-info">
+          <!-- section title -->
+          <div class="about-title">
+            <h2>about me</h2>
+            <div class="underline"></div>
+          </div>
+          <!--end of section title -->
+          <p>
+            I am a full-stack Developer with a passion for creating innovative
+            and user-friendly applications that solve real-world problems. My
+            journey to programming began towards the end of 2021, and since
+            then, I've been passionate about expanding my knowledge and skills
+            in the field. In pursuit of my passion, I enrolled in an online
+            software program named Microverse in 2022, where I had the
+            opportunity to study full-stack web development in great depth. I
+            can help you build a product , feature or website Look through some
+            of my work and experience! If you like what you see and have a
+            project you need coded, don't hesitate to contact me.
+          </p>
 
+          <a href="about.html" class="btn">Get my resume</a>
+        </article>
+
+        <div class="services-center section-center">
+          <!-- single service -->
+          <article class="service">
+            <img
+              src="./assets/images/icon-languages.svg"
+              class="service-icon"
+              alt=""
+            />
+            <!-- <i class="fa-sharp fa-solid fa-globe service-icon"></i> -->
+            <h4>Languages</h4>
+            <ul class="stacks">
+              <li>JavaScript</li>
+              <li>Ruby</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </article>
+          <!-- end of single service -->
+          <!-- single service -->
+          <article class="service">
+            <img
+              src="./assets/images/icon-frameworks.svg"
+              class="service-icon"
+              alt=""
+            />
+            <h4>Frameworks</h4>
+            <ul class="stacks">
+              <li>React.js</li>
+              <li>Ruby on Rails</li>
+              <li>RSpec</li>
+              <li>Capybara</li>
+              <li>Selenium</li>
+            </ul>
+          </article>
+          <!-- end of single service -->
+          <!-- single service -->
+          <article class="service">
+            <img
+              src="./assets/images/icon-skills.svg"
+              class="service-icon"
+              alt=""
+            />
+            <h4>Skills</h4>
+            <ul class="stacks">
+              <li>Database Management</li>
+              <li>Version Control</li>
+              <li>CLI</li>
+              <li>Web Development</li>
+              <li>API Design</li>
+            </ul>
+          </article>
+          <!-- end of single service -->
+        </div>
+      </div>
+    </section>
     <!-- contact section -->
 
     <!-- footer -->
