Add sidebar-link class to all the liks

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         </button>
         <ul class="sidebar-links">
           <li>
-            <a href="#portfolio">Portfolio</a>
+            <a href="#portfolio" class="sidebar-link">Portfolio</a>
           </li>
           <li>
-            <a href="#about">About</a>
+            <a href="#about" class="sidebar-link">About</a>
           </li>
           <li>
-            <a href="#contact">Contact</a>
+            <a href="#contact" class="sidebar-link">Contact</a>
           </li>
         </ul>
         <!-- social icons -->
@@ -189,7 +189,7 @@
       </div>
     </header>
     <!-- portfolio -->
-    <section class="section projects">
+    <section class="section projects" id="portfolio">
       <div class="section-title project-titles">
         <h2>Recent Works</h2>
         <div class="underline"></div>
@@ -207,7 +207,7 @@
     </section>
 
     <!-- about section -->
-    <section class="section about">
+    <section class="section about" id="about">
       <div class="section-center about-center">
         <!-- about info -->
         <article class="about-info">
