--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <p>
             I can help you build a product , feature or website Look through
             some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hesitate to contact me.
+            project you need coded, don't hesitate to contact me.
           </p>
           <a href="#contact" class="btn hero-btn">Get in touch</a>
           <!-- social icons -->
@@ -284,6 +284,49 @@
       </div>
     </section>
     <!-- contact section -->
+    <section class="connect">
+      <video
+        controls
+        autoplay
+        muted
+        loop
+        class="video-container"
+        poster="./assets/images/hero-img.jpeg"
+      >
+        <source src="./assets/videos/connect.mp4" type="video/mp4" />
+        sorry, your browser does not support embedded videos
+      </video>
+      <div class="form-container section-center">
+        <h3>
+          I'm always interested in hearing about new projects, so if you'd like
+          to chat please get in touch.
+        </h3>
+
+        <form action="#" class="form">
+          <input
+            type="text"
+            placeholder="Full name"
+            required
+            class="form-name"
+          />
+          <input
+            type="email"
+            placeholder="Email address"
+            required
+            class="form-email"
+          />
+          <textarea
+            name="msg"
+            id="msg"
+            cols="30"
+            rows="5"
+            class="form-text"
+            placeholder="Hey, I'd like to connect to..."
+          ></textarea>
+          <button class="btn btn-form">Get in touch</button>
+        </form>
+      </div>
+    </section>
 
     <!-- footer -->
     <script src="js/main.js" type="module"></script>
