--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       </div>
     </section>
     <!-- contact section -->
-    <section class="connect">
+    <section class="connect" id="contact">
       <video
         controls
         autoplay
