--- a/index.html
+++ b/index.html
@@ -329,6 +329,65 @@
     </section>
 
     <!-- footer -->
+    <footer class="footer">
+      <!-- social icons -->
+      <ul class="social-icons">
+        <li>
+          <a
+            href="https://github.com/MohamedHNoor"
+            class="social-icon"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="fab fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/mohamedhnoor/"
+            class="social-icon"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://twitter.com/MohamedHNoor"
+            class="social-icon"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://medium.com/@MohamedHNoor"
+            class="social-icon"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="fab fa-medium"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://wellfound.com/u/mohamedhnoor"
+            class="social-icon"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="fab fa-angellist"></i>
+          </a>
+        </li>
+      </ul>
+
+      <p>
+        &copy; <span id="date"></span> Mohamed Hassan Noor. all rights reserved
+      </p>
+    </footer>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
