--- a/index.html
+++ b/index.html
@@ -120,9 +120,12 @@
           <h1>I'm Mohamed Noor</h1>
           <h4>Full stack Developer</h4>
           <p>
-            I can help you build a product , feature or website Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don't hesitate to contact me.
+            Welcome to my portfolio! I'm a passionate full-stack developer
+            specializing in Ruby, Ruby on Rails, React, Redux, and JavaScript. I
+            have a proven track record of building exceptional products,
+            features, and websites. Look through some of my work and experience!
+            If you like what you see and have a project you need coded, don't
+            hesitate to contact me.
           </p>
           <a href="#contact" class="btn hero-btn">Get in touch</a>
           <!-- social icons -->
@@ -218,19 +221,25 @@
           </div>
           <!--end of section title -->
           <p>
-            I am a full-stack Developer with a passion for creating innovative
-            and user-friendly applications that solve real-world problems. My
-            journey to programming began towards the end of 2021, and since
-            then, I've been passionate about expanding my knowledge and skills
-            in the field. In pursuit of my passion, I enrolled in an online
-            software program named Microverse in 2022, where I had the
-            opportunity to study full-stack web development in great depth. I
-            can help you build a product , feature or website Look through some
-            of my work and experience! If you like what you see and have a
-            project you need coded, don't hesitate to contact me.
+            I'm a passionate developer who loves to create innovative and
+            user-friendly applications that solve real-world problems. My
+            journey in programming began in 2021, and since then, I've been
+            dedicated to expanding my knowledge and skills in the field. As part
+            of my pursuit, I enrolled in Microverse, an online software program,
+            in 2022, where I had the opportunity to dive deep into full-stack
+            web development. With this experience, I can help bring your ideas
+            to life! Take a look at some of my work and experience below, and if
+            you like what you see, don't hesitate to reach out. You can also
+            grab a copy of my resume below to learn more about my skills and
+            experience. Let's create something amazing together!
           </p>
 
-          <a href="about.html" class="btn">Get my resume</a>
+          <a
+            href="https://drive.google.com/file/d/1tW-n7ZWh9_YwKxo9l1KO6at-qfo2dHDR/view?usp=sharing"
+            target="_blank"
+            class="btn"
+            >Get my resume</a
+          >
         </article>
 
         <div class="services-center section-center">
@@ -330,6 +339,9 @@
 
     <!-- footer -->
     <footer class="footer">
+      <a href="#" class="btn-scroll-top" title="Home"
+        ><span class="fas fa-angle-up"></span
+      ></a>
       <!-- social icons -->
       <ul class="social-icons">
         <li>
