Fix stylelint error

--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
       <div class="slide-container section-center"></div>
       <!-- buttons -->
       <!-- prev btn -->
-      <button class="prev-btn">
+      <button class="prev-btn" type="button">
         <i class="fas fa-chevron-left"></i>
       </button>
       <!-- next button -->
-      <button class="next-btn">
+      <button class="next-btn" type="button">
         <i class="fas fa-chevron-right"></i>
       </button>
     </section>
