Fix webhint errors

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
           <a
             href="https://drive.google.com/file/d/1tW-n7ZWh9_YwKxo9l1KO6at-qfo2dHDR/view?usp=sharing"
             target="_blank"
+            rel="noopener"
             class="btn"
             >Get my resume</a
           >
@@ -332,7 +333,7 @@
             class="form-text"
             placeholder="Hey, I'd like to connect to..."
           ></textarea>
-          <button class="btn btn-form">Get in touch</button>
+          <button class="btn btn-form" type="button">Get in touch</button>
         </form>
       </div>
     </section>
